<resources>
    <string name="app_name">Mark2</string>
    <string name="item_home">Home</string>
    <string name="logs">Logs</string>
    <string name="stats">Stats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_weight">Your Current Weight</string>
    <string name="placeholder_weight">150</string>
    <string name="december">December</string>
    <string name="_31">31</string>
    <string name="_2020">2020</string>
    <string name="_150">150</string>
    <string name="sample_description">Sample Description</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>