<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="40dp"    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/date_linear"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">
        <TextView
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/december"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="-15sp"
                android:gravity="center_horizontal"
                android:text="@string/_31"
                android:textColor="@color/white"
                android:textSize="70sp"
                android:layout_marginStart="10dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/year"
                android:layout_marginTop="-10sp"
                android:gravity="center_horizontal"
                android:text="@string/_2020"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:layout_marginStart="6dp"
                android:textStyle="bold" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/date_linear"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="wrap_content"
            android:id = "@+id/weight"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"

            android:text="@string/_150"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="70sp"
            android:textStyle="bold" />
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/sample_description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>



    </RelativeLayout>



</androidx.cardview.widget.CardView>