<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClickedActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/change_things"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardElevation="1dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="40dp"    >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/date_new"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/month_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/december"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/day_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="-15sp"
                    android:gravity="center_horizontal"
                    android:text="@string/_31"
                    android:textColor="@color/white"
                    android:textSize="70sp"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/year_new"
                    android:layout_marginTop="-10sp"
                    android:gravity="center_horizontal"
                    android:text="@string/_2020"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:layout_marginStart="6dp"
                    android:textStyle="bold" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/date_new"
                android:orientation="vertical"
                >
                <EditText
                    android:layout_width="wrap_content"
                    android:id = "@+id/weight_new"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:inputType="number"
                    android:hint="@string/_150"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLength="3"
                    android:textSize="70sp"
                    android:textStyle="bold"
                    android:autofillHints="" />
                <EditText
                    android:id="@+id/description_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:maxLength="15"
                    android:hint="@string/sample_description"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:autofillHints="" />

            </LinearLayout>



        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/date_selector"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/change_things"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif"
        android:layout_marginTop="40dp"

        android:text="Select new date"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/finish_transaction"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/date_selector"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif"
        android:text="Create Entry"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</RelativeLayout>